tests/tools/typecheck/positive/let_return_int.nv
fn id(x: int) : int {
    let y : int = x;
    return y;
}

fn main() : void {
    print_int(id(1));
    return;
}
