tests/tools/typecheck/negative/undefined_variable.nv
fn main() : void {
    print_int(x);
    return;
}
